--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ARTSIFY – drop → artsify → zip</title>
-  <!-- Google Fonts: Workbench (console) & Atkinson Hyperlegible Next (timestamp) -->
+  <!-- Google Fonts: Workbench (console) & Atkinson Hyperlegible (timestamp) -->
   <link href="https://fonts.googleapis.com/css2?family=Workbench:wght@400..900&family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -85,6 +85,7 @@
 
     /* Hide the helper input but keep it accessible for click */
     #fileInput { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
+
     /* ===== CRT-style subtle flicker ===== */
     @keyframes crt-flicker {
       0%   { opacity: 0.996; filter: brightness(1) contrast(1); }
@@ -96,9 +97,7 @@
       100% { background-position: 0 8px; }
     }
     /* Apply gentle, fast-ish flicker to both states */
-    .console, .dropzone {
-      animation: crt-flicker 0.11s steps(2, end) infinite;
-    }
+    .console, .dropzone { animation: crt-flicker 0.11s steps(2, end) infinite; }
     /* Very subtle noise/scan overlay for a tube-like feel */
     .app::after {
       content: "";
@@ -125,15 +124,10 @@
     </div>
     <div class="console" id="console" role="log" aria-live="polite"></div>
   </div>
-  
 
   <!-- Dependencies: JSZip & EXIFR (for EXIF reading) -->
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/exifr@7.1.3/dist/full.umd.js"></script>
-
-  <!-- ImageMagick WASM (kept for decoding odd formats when canvas fails) -->
-  <!-- Make sure magick.wasm sits next to index.umd.cjs on the CDN path. -->
-  
 
   <script>
   (function(){
@@ -238,9 +232,32 @@
     // ===== DATES =====
     function getBestDate(file){
       return new Promise(async function(resolve){
-        try{ if (window.exifr && exifr.parse){ var data = await exifr.parse(file,{tiff:true, exif:true}); var d = data && (data.DateTimeOriginal || data.CreateDate || data.ModifyDate); if (d instanceof Date && !isNaN(+d)) var y=d.getUTCFullYear(), m=d.getUTCMonth(), day=d.getUTCDate(); return resolve({ date: new Date(Date.UTC(y,m,day)), source: 'EXIF' }); } }catch(e){}
-        var d2 = new Date(file.lastModified || Date.now());
-        var name=(file&&file.name)||'';var digits='';for(var i=0;i<name.length;i++){var c=name[i];if(c>='0'&&c<='9')digits+=c;}if(digits.length>=8){var yy=+digits.slice(0,4),mo=+digits.slice(4,6),dd=+digits.slice(6,8);if(yy>=1900&&mo>=1&&mo<=12&&dd>=1&&dd<=31){return resolve({ date:new Date(Date.UTC(yy,mo-1,dd)), source:'NAME' });}}var d2=new Date(file&&file.lastModified?file.lastModified:Date.now());var norm=new Date(Date.UTC(d2.getUTCFullYear(),d2.getUTCMonth(),d2.getUTCDate()));resolve({ date:norm, source:'FILE' });
+        function normalizeUTCDate(d){ return new Date(Date.UTC(d.getUTCFullYear(), d.getUTCMonth(), d.getUTCDate())); }
+        function parseExifDate(raw){
+          if (raw && raw instanceof Date && !isNaN(+raw)) return raw;
+          if (typeof raw === 'string'){
+            // EXIF-style: YYYY:MM:DD HH:MM:SS (take just the date part)
+            var m = /(\d{4}):(\d{2}):(\d{2})/.exec(raw);
+            if (m) return new Date(Date.UTC(+m[1], +m[2]-1, +m[3]));
+            var t = Date.parse(raw);
+            if (!isNaN(t)) return new Date(t);
+          }
+          return null;
+        }
+        // 1) Prefer EXIF date
+        try {
+          if (window.exifr && exifr.parse){
+            var data = await exifr.parse(file, { tiff:true, exif:true });
+            var raw = data && (data.DateTimeOriginal || data.CreateDate || data.ModifyDate);
+            var exifDate = parseExifDate(raw);
+            if (exifDate){
+              return resolve({ date: normalizeUTCDate(exifDate), source: 'EXIF' });
+            }
+          }
+        } catch(e) { /* ignore and fall back */ }
+        // 2) Fallback: file timestamp (no filename guessing)
+        var ts = new Date(file && file.lastModified ? file.lastModified : Date.now());
+        return resolve({ date: normalizeUTCDate(ts), source: 'FILE' });
       });
     }
 
@@ -360,7 +377,7 @@
       var div=document.createElement('div'); div.className='line actions';
       var aDL=document.createElement('a'); aDL.className='link'; aDL.textContent='DOWNLOAD'; aDL.href=url; aDL.download=zipName;
       var aRS=document.createElement('a'); aRS.className='link'; aRS.textContent='RESET'; aRS.href='#'; aRS.addEventListener('click', function(e){ e.preventDefault(); resetAll(); });
-      div.appendChild(aDL); div.appendChild(document.createTextNode('   |   ')); div.appendChild(aRS);
+      div.appendChild(aDL); div.appendChild(document.createTextNode('   |   ')); div.appendChild(aRS); /* hard spaces */
       logEl.appendChild(div); logEl.scrollTop=logEl.scrollHeight;
     }
 
@@ -425,3 +442,4 @@
   <!-- Add TIFF decoder fallback (UTIF) -->
   <script src="https://cdn.jsdelivr.net/npm/utif@3.0.0/UTIF.min.js"></script>
 </body>
+</html>
