--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ARTSIFY – drop → artsify → zip</title>
   <!-- Google Fonts: Workbench (console) & Atkinson Hyperlegible (timestamp) -->
-  <link href="https://fonts.googleapis.com/css2?family=Workbench:wght@400..900&family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Workbench:wght@400..900&family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet">  -->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2
+?family=Workbench:wght@400..900
+&family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700
+&display=swap" rel="stylesheet">
+  
+  
   <style>
     :root {
       --bg: #0d0f12;
